Initial version of travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,19 @@ addons:
     packages:
     - python-docutils
 
+env:
+  - VARNISH_VERSION=4.1.5
+  - VARNISH_VERSION=5.0.0
+
 before_install:
   - set -e
-  - wget https://repo.varnish-cache.org/source/varnish-5.0.0.tar.gz
+  - wget https://repo.varnish-cache.org/source/varnish-${VARNISH_VERSION}.tar.gz
   - tar -zxf varnish-*.tar.gz
   - pushd varnish-*/
   - ./configure --prefix=/usr
   - make -sj32
   - sudo make install
+  - export VARNISHSRC=$PWD
   - popd
 
 before_script:
@@ -25,7 +30,7 @@ before_script:
   - make -j4
 
 script:
-  - make check -j4
+  - make check -j4 || (cat ./src/test-suite.log; false)
 
 compiler:
   - clang
