Test another apr-1.0 include folder

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,9 @@
+# apr-1 for redhat
+# apr-1.0 for debian
 AM_CFLAGS = $(VARNISHAPI_CFLAGS) -Wall -Werror \
 	-I/usr/include/libxml2 \
 	-I/usr/include/apr-1 \
+	-I/usr/include/apr-1.0 \
 	-I$(VARNISHSRC)
 
 AM_LDFLAGS = $(VARNISHAPI_LIBS) $(VMOD_LDFLAGS) \
