--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
 before_script:
   - ./autogen.sh
   - ./configure --prefix=/usr
-  - make -j4
+  - make
 
 script:
   - make check -j4 || (cat ./src/test-suite.log; false)
