Update autoconf & fix AC_ARG_WITH syntax
to work with 2.71

--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,10 @@
-AC_PREREQ([2.63])
-AC_INIT([libvmod-soap], [1.0], [], [vmod-soap])
+AC_PREREQ([2.69])
+AC_INIT([libvmod-soap],[1.0],[],[vmod-soap])
 AC_COPYRIGHT([Copyright (c) 2019, Refinitiv])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_SRCDIR(src/vmod_soap.vcc)
-AC_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADERS([config.h])
 
 AM_INIT_AUTOMAKE([1.11 -Wall -Werror foreign parallel-tests])
 AM_SILENT_RULES([yes])
@@ -24,7 +24,7 @@ AC_ARG_WITH([rst2man],
 		[--with-rst2man=PATH],
 		[Location of rst2man (auto)]),
 	[RST2MAN="$withval"],
-	AC_CHECK_PROGS(RST2MAN, [rst2man rst2man.py], []))
+	[AC_CHECK_PROGS(RST2MAN, [rst2man rst2man.py], [])])
 
 m4_ifndef([VARNISH_PREREQ], AC_MSG_ERROR([Need varnish.m4 -- see README.md]))
 
