Adjustments for current varnish-cache

--- a/configure.ac
+++ b/configure.ac
@@ -28,23 +28,19 @@ AC_ARG_WITH([rst2man],
 
 m4_ifndef([VARNISH_PREREQ], AC_MSG_ERROR([Need varnish.m4 -- see README.md]))
 
-VARNISH_PREREQ([4.1], [5.0.0])
+VARNISH_PREREQ([4.1], [trunk])
 VARNISH_VMODS([soap])
 
 AC_SUBST([VARNISHSRC])
 AC_ARG_VAR([VARNISHSRC], [path to Varnish source tree])
 AS_IF([test "x${VARNISHSRC}" = "x" ], AC_MSG_FAILURE([\$VARNISHSRC is not set]), AC_MSG_RESULT([yes]))
 AC_CHECK_FILE([$VARNISHSRC/include/vrt.h],
-        [],
-        [AC_MSG_FAILURE([\$VARNISHSRC "$VARNISHSRC" is not a Varnish source directory])]
+	[],
+	[AC_MSG_FAILURE([\$VARNISHSRC "$VARNISHSRC" is not a Varnish source directory])]
 )
 
 VMOD_TESTS="$(cd $srcdir/src && echo tests/*.vtc)"
 AC_SUBST(VMOD_TESTS)
-
-PKG_CHECK_VAR([LIBVARNISHAPI_LIBDIR], [varnishapi], [libdir])
-AC_SUBST([VARNISH_LIBRARY_PATH],
-	[$LIBVARNISHAPI_LIBDIR:$LIBVARNISHAPI_LIBDIR/varnish])
 
 AC_CONFIG_FILES([
 	Makefile
